# ChangeLog for net-mail/postfix
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/postfix/Attic/ChangeLog,v 1.79 2003/07/18 20:34:39 lanius Exp $

  18 Jul 2003; lanius@gentoo.org postfix-2.0.11.ebuild,
  postfix-2.0.12-r1.ebuild, postfix-2.0.13-r1.ebuild, postfix-2.0.13.ebuild,
  files/smtpd-2.0.conf:
  fixed smtpd.conf for postfix 2.0 (bug #24556)

*postfix-2.0.13-r1 (14 Jul 2003)

  14 Jul 2003; Brandon Low <lostlogic@gentoo.org> postfix-2.0.13-r1.ebuild:
  Just update the TLS and IPV6 patches

  11 Jul 2003; Nick Hadaway <raker@gentoo.org> postfix-2.0.13.ebuild,
  files/postfix-pg.postfix-2.0.0.2.patch.bz2:
  Added postgres support and associated patch.  Also installs a
  PGSQL_README.  Closes bug #23996

*postfix-2.0.13 (30 Jun 2003)

  30 Jun 2003; Brandon Low <lostlogic@gentoo.org> postfix-2.0.13.ebuild:
  Bump, update tls and ipv6 patches

  20 Jun 2003; Brandon Low <lostlogic@gentoo.org> postfix-2.0.12.ebuild:
  This version no longer has all required distfiles available. 

*postfix-2.0.12-r1 (20 Jun 2003)

  20 Jun 2003; Brandon Low <lostlogic@gentoo.org> postfix-2.0.12-r1.ebuild:
  Bump TLS version

  16 Jun 2003; Seemant Kulleen <seemant@gentoo.org> postfix-2.0.9.ebuild:
  mark stable on sparc

  14 Jun 2003; Brandon Low <lostlogic@gentoo.org> postfix-2.0.10-r1.ebuild,
  postfix-2.0.11.ebuild, postfix-2.0.12.ebuild, postfix-2.0.9.ebuild:
  Ok, so apparently putting the user's original config file from the wrong
  location in a ._cfg file was a Bad Thing (TM) because too many people don't
  merge their config files. I therefore have changed it so that the OTHER file
  (the blank original config file, if it existed) is saved in a ._cfg which the
  user can ignore as seems to be standard proceedure.

  13 Jun 2003; Brandon Low <lostlogic@gentoo.org> postfix-2.0.10-r1.ebuild,
  postfix-2.0.9.ebuild:
  Fix bug 15252 in stable versions as well

*postfix-2.0.12 (13 Jun 2003)
