@@ -1,30 +1,30 @@
-MD5 0b8352f174f2378e34082833c389d68f ChangeLog 16575
-MD5 0adbbef42d28091a11b3b675345dae91 postfix-1.1.11.20020917-r1.ebuild 4942
-MD5 c79b19f95cb38b8802966d7efb54bc60 postfix-1.1.11.20020917.ebuild 4924
 MD5 82ba4d66f539a469d378ace55799f833 postfix-2.0.10-r1.ebuild 6158
-MD5 af938633600e0c31233af17f2c5008c5 postfix-2.0.11.ebuild 6024
-MD5 c1939447e7af5681008b1bb8e1cf7a95 postfix-2.0.12-r1.ebuild 6027
-MD5 262e502050c257402bcbd43af463a70c postfix-2.0.13-r1.ebuild 6399
 MD5 566f7daa4609b8810c25756710ab63a1 postfix-2.0.13.ebuild 6382
+MD5 24ff6ca18b7db3e958de04e1ae5f71dc postfix-2.0.13-r1.ebuild 6400
 MD5 656396a2cf9d1d2c05cd6b55dc9e988d postfix-2.0.9.ebuild 6242
-MD5 6775371821db3139dd2470c794a1e01f files/digest-postfix-1.1.11.20020917 166
-MD5 6775371821db3139dd2470c794a1e01f files/digest-postfix-1.1.11.20020917-r1 166
-MD5 499f6d9f2295ba6e359ce568842d050c files/digest-postfix-2.0.10-r1 295
-MD5 1d4abcdc55f9e76735ae1ae0fcc13c53 files/digest-postfix-2.0.11 295
-MD5 6264e15636614de0cce39a66de79db5f files/digest-postfix-2.0.12-r1 295
-MD5 c0419702f95f1ae3461d57ef00cf9dc4 files/digest-postfix-2.0.13 296
-MD5 fbf57b537c7f42a7bf96f073ee3d22bf files/digest-postfix-2.0.13-r1 297
-MD5 e126c8295dad90d20bf2d6a47086ab0e files/digest-postfix-2.0.9 220
-MD5 40a96d0b5dfb56714e11d1f379ddc5a7 files/main.cf 18376
-MD5 e17b09d7df6537631ef2263b83fe0d38 files/master.cf 4421
-MD5 3004148a32063214f57f0316b9f46116 files/postfix 517
+MD5 0adbbef42d28091a11b3b675345dae91 postfix-1.1.11.20020917-r1.ebuild 4942
+MD5 c1939447e7af5681008b1bb8e1cf7a95 postfix-2.0.12-r1.ebuild 6027
+MD5 251d48da83e46f023d774e15a1fc1cfd ChangeLog 16698
+MD5 af938633600e0c31233af17f2c5008c5 postfix-2.0.11.ebuild 6024
+MD5 c79b19f95cb38b8802966d7efb54bc60 postfix-1.1.11.20020917.ebuild 4924
 MD5 a3eadfcfa0bf6f88ccff41e2d065745b files/postfix-2.0.8_patch.patch 552
-MD5 ff6584c14212d383b742fe5fc0aceed5 files/postfix-2.0.9-get-FQDN.patch 993
-MD5 61fc23026a194c592078961b7da6455c files/postfix-pg.postfix-2.0.0.2.patch.bz2 7526
+MD5 6775371821db3139dd2470c794a1e01f files/digest-postfix-1.1.11.20020917-r1 166
 MD5 fd4b6e380aed0e58ae1f882c71d1de52 files/postfix.rc6 521
 MD5 569f1c46350b2718419b72bb9c443c3f files/saslpass 135
-MD5 798b43d4f63482e4eae84941d5b4f40e files/smtp.pam 206
-MD5 e651e2015b6c6f1495ac84a37e4a8871 files/smtpd.conf 130
 MD5 460833c3a1ffc3a240c72f0537802b5c files/tls+ipv6-1.4-pf-1.1.11-20020917.patch.bz2 72150
+MD5 40a96d0b5dfb56714e11d1f379ddc5a7 files/main.cf 18376
+MD5 1d4abcdc55f9e76735ae1ae0fcc13c53 files/digest-postfix-2.0.11 295
+MD5 c0419702f95f1ae3461d57ef00cf9dc4 files/digest-postfix-2.0.13 296
+MD5 e651e2015b6c6f1495ac84a37e4a8871 files/smtpd.conf 130
+MD5 ff6584c14212d383b742fe5fc0aceed5 files/postfix-2.0.9-get-FQDN.patch 993
+MD5 e17b09d7df6537631ef2263b83fe0d38 files/master.cf 4421
+MD5 6775371821db3139dd2470c794a1e01f files/digest-postfix-1.1.11.20020917 166
+MD5 e126c8295dad90d20bf2d6a47086ab0e files/digest-postfix-2.0.9 220
+MD5 61fc23026a194c592078961b7da6455c files/postfix-pg.postfix-2.0.0.2.patch.bz2 7526
+MD5 798b43d4f63482e4eae84941d5b4f40e files/smtp.pam 206
+MD5 3004148a32063214f57f0316b9f46116 files/postfix 517
+MD5 499f6d9f2295ba6e359ce568842d050c files/digest-postfix-2.0.10-r1 295
+MD5 6264e15636614de0cce39a66de79db5f files/digest-postfix-2.0.12-r1 295
+MD5 fbf57b537c7f42a7bf96f073ee3d22bf files/digest-postfix-2.0.13-r1 297
 MD5 7dea3c30c3550cbbcdf4aac0b6d8dffa files/smtpd-2.0.conf 138
 MD5 803eb5ffc166aaaf2f3b78ddf71fe73d files/postfix-2.0.0/main.cf.diff 2382
