@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/postfix
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/postfix/Attic/ChangeLog,v 1.79 2003/07/18 20:34:39 lanius Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/postfix/Attic/ChangeLog,v 1.80 2003/07/21 08:35:55 raker Exp $
+
+  21 Jul 2003; Nick Hadaway <raker@gentoo.org> postfix-2.0.13-r1.ebuild:
+  Only install the smtpd.conf if sasl is in USE.
 
   18 Jul 2003; lanius@gentoo.org postfix-2.0.11.ebuild,
   postfix-2.0.12-r1.ebuild, postfix-2.0.13-r1.ebuild, postfix-2.0.13.ebuild,
